--- a/background.html
+++ b/background.html
@@ -66,6 +66,13 @@ OptionsBackend = {
     favorites_color: '#7f870b',
     lists_color: '#7f870b',
 
+    tweets_color_only_unified: true,
+    home_tweets_color: 'rgba(255, 120, 120, 0.5)',
+    mentions_tweets_color: 'rgba(255, 120, 120, 0.5)',
+    dms_tweets_color: 'rgba(255, 120, 120, 0.5)',
+    lists_tweets_color: 'rgba(255, 120, 120, 0.5)',
+    favorites_tweets_color: 'rgba(255, 120, 120, 0.5)',
+
     notification_fade_timeout: 6000,
     theme: 'css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css'
   },
